Updated Versions
JavaFX Dependencies with Classifiers

 Added Dependencies

 JUnit Consolidation

 Added Repositories

 Maven Surefire Plugin